# abliteration

./: .gitignore  README.md  pyproject.toml  setup.py
dataset/: harmful_zh.txt
examples/: experiment.py
src/abliterate/: utils.py
src/abliterate/config/: config.py
src/abliterate/core/: engine.py
src/abliterate/datasets/: manager.py
src/abliterate/models/: base.py  default.py
tests/: test_abliteration.py
