[project]
name = "abliteration"
version = "0.1.0"
description = "A library for model abliteration, designed to help make language models safer by removing harmful behaviors"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jaxtyping>=0.3.2",
    "torch==2.6.0",
    "transformers>=4.52.4",
    "accelerate==1.7.0",
    "bitsandbytes>=0.46.0",
    "einops>=0.8.1",
    "datasets>=3.6.0",
    "tqdm>=4.65.0",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch" }


[dependency-groups]
dev = [
    "notebook>=7.4.3",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.1.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abliterate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/abliterate"

[tool.isort]
profile = "ruff"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 160
target-version = "py311"
select = ["E", "F", "B", "I"]
ignore = []



